# text_classifier

./: .gitignore  README  README.md  main.py  pyproject.toml  requirements.txt
results1/: model_metrics_summary.csv  terminal1.txt
results2/: model_metrics_summary.csv  terminal2.txt
