[project]
name = "text-classifier"
version = "0.1.0"
description = "Classificador de textos para o dataset AG News"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
]

[project.urls]
Repository = "[URL_DO_REPOSITÓRIO]"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configurações de ferramentas de desenvolvimento
[tool.ruff]
line-length = 100
